# odoo-dev-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  dashboard.plan.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  state.py
backend/apps/database/: apps.py
backend/apps/git_ops/: apps.py  urls.py  views.py
backend/apps/notebooks/: apps.py  consumers.py  kernel_manager.py  routing.py  urls.py  views.py
backend/apps/onboard/: apps.py  urls.py  views.py
backend/apps/projects/: models.py  serializers.py  urls.py  views.py
backend/apps/settings_app/: apps.py  urls.py  views.py
backend/apps/streams/: apps.py  urls.py  views.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/: config_service.py  cron_scheduler.py  db_service.py  docker_service.py  git_service.py  health_service.py  onboard_service.py  registry.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: BranchTab.vue  CpuGauge.vue  DatabaseTab.vue  DeployPanel.vue  LogViewer.vue  Logo.vue  MemoryBar.vue  ModulesTab.vue  NotebookTab.vue  ProjectCard.vue  SettingsTab.vue  StatusBadge.vue  StreamOutput.vue
frontend/src/router/: index.ts
frontend/src/stores/: config.ts  notifications.ts  projects.ts
frontend/src/utils/: ansi.ts  sse.ts
frontend/src/views/: DashboardView.vue  HealthView.vue  HelpView.vue  (+2 more)
nginx/: default.conf
static/: app.js  style.css
templates/: index.html
